...
			// 	colors={['#ffffff', '#ffffff', 'rgba(2, 217, 188, 0.2)']}
			// 	style={styles.LinearGradient}
			// >
			<View style={styles.container}>
				<View>
					<TouchableOpacity
						testID="Edit_Accounts_Buttons"
						style={styles.option}
						onPress={() => this.props.navigation.navigate('DoctorEditAccount')}
					>
						<View style={styles.icon}>
							<Icon name="user" size={30} color={'#5c5c5c'} />
						</View>
...
